news page corrections

--- a/css/less/systems/system-classes.less
+++ b/css/less/systems/system-classes.less
@@ -275,3 +275,17 @@
 //    .flex-align(center);
 //    .flex-box-align(center);
 //}
+
+.admin-hide-image{
+    & > img{
+        display: none;
+    }
+}
+
+.news-page{
+    p{
+        & > img{
+            width: 100%;
+        }
+    }
+}
