--- a/css/nav.css
+++ b/css/nav.css
@@ -45,7 +45,7 @@ extend ' .mobile-menu li' has no matches
   .main_menu > li:hover,
   .main_menu a.current {
     background: #f16f29;
-    color: #fff;
+    color: #ffffff;
   }
   .main_menu > li:hover ul {
     display: block;
@@ -65,7 +65,7 @@ extend ' .mobile-menu li' has no matches
     z-index: 0;
     display: none;
     width: 300px;
-    background: #FFF;
+    background: #ffffff;
     color: #888888;
     box-shadow: 0 3px 5px #555555;
   }
@@ -251,7 +251,6 @@ aside .relatedpages li p {
 }
 .news-item .news-item-title {
   display: block;
-  text-align: center;
   text-decoration: none;
   font-weight: 700;
   font-size: 1.25em;
@@ -283,6 +282,34 @@ aside .relatedpages li p {
 }
 .news-item .newslog-tag-filter::before {
   content: "\e023";
+}
+aside .news-item {
+  margin-left: 0%;
+  margin-right: 0;
+  width: 100%;
+}
+aside .news-item:nth-of-type(1n + 1) {
+  margin-left: 0;
+}
+@media only screen and (max-width: 800px) and (min-width: 481px) {
+  aside .news-item {
+    width: 100%;
+  }
+  aside .news-item:nth-of-type(1n + 1) {
+    margin-left: 0;
+  }
+}
+@media only screen and (max-width: 480px) {
+  aside .news-item {
+    width: 100%;
+  }
+  aside .news-item:nth-of-type(1n + 1) {
+    margin-left: 0;
+  }
+}
+aside .news-item .news-item-title {
+  font-weight: normal;
+  line-height: 1.1;
 }
 @media (min-width: 801px) {
   body .mobile-bar,
@@ -350,7 +377,7 @@ aside .relatedpages li p {
 .mobile-bar.top {
   top: 0;
   line-height: 56px;
-  color: #FFF;
+  color: #ffffff;
   background: #f16f29;
 }
 .mobile-bar.top .btn.icon {
@@ -397,7 +424,7 @@ aside .relatedpages li p {
 .sub-menu-btn {
   width: 48px;
   text-align: center;
-  color: #FFF;
+  color: #ffffff;
   font-size: 1.25em;
   position: absolute;
   right: 0;
@@ -593,7 +620,7 @@ aside .relatedpages li p {
 .dropdown-menu,
 .mobile-menu.dropdown,
 [data-dropdown-open] .dropdown-menu-mobile {
-  background: #fff !important;
+  background: #ffffff !important;
   color: #575656 !important;
   position: absolute;
   z-index: 92 !important;
