--- a/css/less/_work_space/basic.less
+++ b/css/less/_work_space/basic.less
@@ -35,71 +35,48 @@ main{
 
 //	HEADER Style
 //==================================================
-header{
-	padding-top     : 15em;
-	margin-bottom   : 1em;
-	overflow        : hidden;
-	text-align      : center;
-	font-family     : @font-family-headings;
+header {
+	//padding-top     : 16.5em;
+	margin-bottom: 1em;
+	overflow: hidden;
+	text-align: center;
+	font-family: @font-family-headings;
 	.border-radius(0 0 10px 10px);
-	&:after, &:before{
-		content    : '';
-		position   : absolute;
-		top        : 0;
-		width      : 4px;
-		height     : 14.5em;
-		.border-radius(1em);
-		background : @brand-primary;
-	}
-	&:before{
-		left : 47%;
-	}
-	&:after{
-		right : 47%;
-	}
 
-	@media only screen and (max-width : @responsive-size-tablet){
-		padding-top : 10em;
+	@media only screen and (max-width: @responsive-size-tablet) {
+		padding-top: 10em;
 	}
-	@media only screen and (max-width : @responsive-size-mobile){
-		padding-top         : 3rem;
-		font-size           : 0.75rem;
-		background-size     : 80%;
-		background-position : center -3rem;
-	}
-
-	color           : @header-color;
-	background      : @header-bg;
-	background-size : 100%;
-
-	&.inner{
-		padding-top : 13em;
-		&:after, &:before{
-			height : 11em;
-		}
+	@media only screen and (max-width: @responsive-size-mobile) {
+		padding-top: 3rem;
+		font-size: 0.75rem;
+		background-size: 80%;
+		background-position: center -3rem;
 	}
 
 	// -- LOGO Style
-	.logo{
-		margin-top : 0;
-		a{
+	.logo {
+		margin-top: 0;
+		text-align: left;
+		a {
 			.inline-block();
-			margin-top      : 0.5em;
-			margin-bottom   : 0.5em;
-			font-family     : inherit;
-			font-weight     : 400;
-			text-decoration : none;
-			color           : @brand-primary;
+			margin-top: -120px;
+			max-width: 166px;
+			//margin-top      : 0.5em;
+			//margin-bottom   : 0.5em;
+			font-family: inherit;
+			font-weight: 400;
+			text-decoration: none;
+			color: @brand-primary;
 		}
 
-		img{
+		img {
 		}
 	}
-	.slogan{
-		display       : block;
-		margin-bottom : 1em;
-		font-size     : 1.5em;
-		color         : @brand-primary;
+	.slogan {
+		display: block;
+		margin-bottom: 1em;
+		font-size: 1.5em;
+		color: @brand-primary;
 	}
 }
 
@@ -347,6 +324,7 @@ aside{
 
 footer{
 	padding : 0.5em;
+	margin-bottom: 20px;
 	border  : 2px solid #ffffff;
 	.border-radius(0.5em);
 	color   : @footer-color;
@@ -407,4 +385,49 @@ footer{
 //==================================================
 #go-top{
 	.button-color(#ffffff; fade(#000000, 50%); fade(#000000, 50%); @primary-color; @primary-bg; @primary-bg);
+}
+
+.container {
+	&.width-1200 {
+		width: 1200px;
+		& > .grid_2 {
+			width: 21%;
+		}
+		& > .grid_8 {
+			width: 58%;
+		}
+	}
+}
+
+.mt136 {
+	margin-top: 136px;
+}
+
+.affix {
+	position: fixed !important;
+}
+
+.affix-top {
+	position: absolute !important;
+	top: 0;
+}
+
+.affix-bottom {
+	position: absolute !important;
+}
+
+.floating-block {
+	position: relative;
+	height: 1px;
+	padding-right: 75px;
+}
+
+.right-ad {
+	padding-left: 75px;
+	overflow: hidden;
+}
+
+.news-page-teaser{
+	.border-radius(30px);
+	overflow: hidden;
 }
