--- a/css/less/systems/system-classes.less
+++ b/css/less/systems/system-classes.less
@@ -277,8 +277,19 @@
 //}
 
 .admin-hide-image{
+    margin-bottom: 10px;
     & > img{
         display: none;
+    }
+    a{
+        img{
+            display: none;
+        }
+        &.tpopup{
+            img{
+                display: block;
+            }
+        }
     }
 }
 
