--- a/css/less/widgets/news_list.less
+++ b/css/less/widgets/news_list.less
@@ -8,6 +8,11 @@
     .news-item-image{
         display       : block;
         margin-bottom : 1em;
+        .border-radius(2em);
+        overflow: hidden;
+        a{
+            display: block;
+        }
         img{
             width : 100%;
         }
