--- a/css/style.css
+++ b/css/style.css
@@ -36,17 +36,20 @@ header {
 }
 header .logo {
   margin-top: 0;
+  margin-bottom: 0;
   text-align: left;
 }
 header .logo a {
-  display: inline-block;
-  vertical-align: middle;
+  display: block;
   margin-top: -120px;
-  max-width: 166px;
+  max-width: 177px;
   font-family: inherit;
   font-weight: 400;
   text-decoration: none;
   color: #f16f29;
+}
+header .logo img {
+  width: 100%;
 }
 header .slogan {
   display: block;
@@ -360,6 +363,10 @@ aside .offer-list li {
     margin-bottom: 1rem;
   }
 }
+.social-block.padding {
+  padding-left: 10px;
+  padding-right: 10px;
+}
 .some-text {
   position: fixed;
   bottom: 0;
@@ -382,9 +389,6 @@ aside .offer-list li {
   text-decoration: none;
   font-weight: 700;
   color: #575656;
-}
-aside {
-  margin-top: 9em;
 }
 aside .aside-box {
   margin-bottom: 30px;
