--- a/css/less/components/typography.less
+++ b/css/less/components/typography.less
@@ -33,6 +33,7 @@ h1, h2, h3, h4, h5, h6,
     margin-bottom : 0.5em;
     color         : @heading-color;
     font-family   : @font-family-headings;
+    line-height: 1.2;
     & when not(@heading-weight = bold) and not (@heading-weight = 700) {
         font-weight   : @heading-weight;
     }
