--- a/css/less/_getting_started/2-variables.less
+++ b/css/less/_getting_started/2-variables.less
@@ -14,13 +14,13 @@
 // [Fonts]
 //==================================================
 @font-family-text     : 'Lato', Arial, sans-serif;
-@font-family-headings : 'Raleway', Arial, sans-serif;
+@font-family-headings : 'Lato', Arial, sans-serif;
 
 // [Fonts size]
 //==================================================
 @font-size-larger     : 1.5em;
 @font-size-large      : 1.25em;
-@font-size-base       : 14px;
+@font-size-base       : 16px;
 @font-size-small      : 0.85em;
 @font-size-mini       : 0.75em;
 
@@ -42,7 +42,7 @@
 // [Grid system]
 //==================================================
 //Width for container
-@grid-container-width    : 1000px;
+@grid-container-width    : 1278px;
 @grid-container-maxWidth : 95%;
 @grid-container-minWidth : 0;
 
