--- a/css/less/widgets/menu_main.less
+++ b/css/less/widgets/menu_main.less
@@ -5,7 +5,7 @@
     .main_menu when (@menu-main){
         position      : relative;
         z-index       : 11;
-        .inline-block-wrap(@font-size : 20px;);
+        .inline-block-wrap();
         & when not(@nav-bg = transparent){
             background : @nav-bg;
         }
@@ -19,6 +19,10 @@
             .grid-elements(5; @grid-margin-width; true);
             .border-radius(10px);
             .rgba(#ffffff, 65%);
+
+            & > a{
+                font-size: 27px
+            }
 
             &:hover{
                 & when not(@nav-bg = @nav-bg-li-hover){
@@ -40,7 +44,7 @@
 
         a{
             display         : block;
-            padding         : @padding-base-vertical @padding-base-horizontal;
+            padding         : 3px @padding-base-horizontal;
             text-align      : center;
             text-decoration : none;
             .border-radius(10px);
