--- a/css/reset.css
+++ b/css/reset.css
@@ -1,6 +1,6 @@
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 html {
-  font-size: 14px;
+  font-size: 16px;
   font-family: 'Lato', Arial, sans-serif;
   line-height: 1.5;
   -ms-text-size-adjust: 100%;
@@ -206,11 +206,11 @@ th {
 }
 ::-moz-selection {
   background: #f16f29;
-  color: #FFF;
+  color: #ffffff;
 }
 ::selection {
   background: #f16f29;
-  color: #FFF;
+  color: #ffffff;
 }
 blockquote,
 q {
@@ -282,7 +282,7 @@ iframe {
 [contenteditable="true"] {
   display: inline-block;
   vertical-align: middle;
-  background: #fff;
+  background: #ffffff;
   border: 1px solid transparent;
   cursor: text;
   padding: 2px 6px;
@@ -463,7 +463,7 @@ select optgroup {
 .related-products .page-title {
   margin: 0 0 0.25em;
   font-size: 1.25em;
-  font-family: 'Raleway', Arial, sans-serif;
+  font-family: 'Lato', Arial, sans-serif;
 }
 .listpages span,
 .listcategories span,
