--- a/css/less/_getting_started/2-variables.less
+++ b/css/less/_getting_started/2-variables.less
@@ -176,7 +176,7 @@
 
 // [Links]
 //==================================================
-@link-color         : #07A0C3;
+@link-color         : @brand-primary;
 @link-color-hover   : darken(@link-color, 20%);
 @link-color-active  : @link-color-hover;
 @link-color-visited : none;
