--- a/css/less/components/form.less
+++ b/css/less/components/form.less
@@ -46,6 +46,15 @@
                 }
             }
         }
+        &#formaddtoarchive{
+            input[type="text"], select, textarea{
+                border-color: @brand-primary;
+                height: auto;
+            }
+            .captcha{
+                text-align: center;
+            }
+        }
     }
 
     fieldset{
