--- a/css/less/systems/system-classes.less
+++ b/css/less/systems/system-classes.less
@@ -293,10 +293,10 @@
     }
 }
 
-.news-page{
-    p{
-        & > img{
-            width: 100%;
-        }
-    }
-}
+//.news-page{
+//    p{
+//        & > img{
+//            width: 100%;
+//        }
+//    }
+//}
