--- a/css/less/_getting_started/1-activate_componentsJS.less
+++ b/css/less/_getting_started/1-activate_componentsJS.less
@@ -6,7 +6,7 @@
 @componentsJS-alert            : true;
 @componentsJS-accordion        : false;
 @componentsJS-tabs             : false;
-@componentsJS-dialog           : false;
+@componentsJS-dialog           : true;
 @componentsJS-datepicker       : false;
 @componentsJS-autocomplete     : false;
 @componentsJS-tooltips         : false;
